tests/ui/generic-associated-types/issue-84931.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/issue-84931.rs:14:21
   |
LL |     type Item<'a> = &'a mut T;
   |                     ^^^^^^^^^- help: consider adding a where clause: `where T: 'a`
   |                     |
   |                     ...so that the reference type `&'a mut T` does not outlive the data it points at

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
